[gd_scene load_steps=109 format=2]

[ext_resource path="res://GameScenes/Platform/Buttons/OptionsButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/title.png" type="Texture" id=2]
[ext_resource path="res://GameScenes/Platform/Buttons/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameScenes/Platform/Buttons/ContinueButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/back-jump/back-jump-2.png" type="Texture" id=5]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/back-jump/back-jump-3.png" type="Texture" id=6]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/back-jump/back-jump-4.png" type="Texture" id=7]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/jump/jump-4.png" type="Texture" id=8]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run/run-2.png" type="Texture" id=9]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run/run-7.png" type="Texture" id=10]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/jump/jump-2.png" type="Texture" id=11]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/jump/jump-3.png" type="Texture" id=12]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/jump/jump-1.png" type="Texture" id=13]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run/run-1.png" type="Texture" id=14]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run/run-6.png" type="Texture" id=15]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run/run-8.png" type="Texture" id=16]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run/run-3.png" type="Texture" id=17]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run/run-5.png" type="Texture" id=18]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run/run-4.png" type="Texture" id=19]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/back-jump/back-jump-6.png" type="Texture" id=20]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/back-jump/back-jump-1.png" type="Texture" id=21]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/back-jump/back-jump-7.png" type="Texture" id=22]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/back-jump/back-jump-5.png" type="Texture" id=23]
[ext_resource path="res://GameScenes/Platform/TitleMenu.gd" type="Script" id=24]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/climb/climb-4.png" type="Texture" id=25]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/crouch/crouch.png" type="Texture" id=26]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/climb/climb-5.png" type="Texture" id=27]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/climb/climb-1.png" type="Texture" id=28]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run-shoot/run-shoot-6.png" type="Texture" id=29]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run-shoot/run-shoot-8.png" type="Texture" id=30]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run-shoot/run-shoot-7.png" type="Texture" id=31]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run-shoot/run-shoot-5.png" type="Texture" id=32]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/climb/climb-6.png" type="Texture" id=33]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run-shoot/run-shoot-1.png" type="Texture" id=34]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run-shoot/run-shoot-4.png" type="Texture" id=35]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run-shoot/run-shoot-3.png" type="Texture" id=36]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/climb/climb-2.png" type="Texture" id=37]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/run-shoot/run-shoot-2.png" type="Texture" id=38]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/player/climb/climb-3.png" type="Texture" id=39]
[ext_resource path="res://Textures/Platformer_Assets/shadow-80x70.png" type="Texture" id=40]
[ext_resource path="res://Textures/Platformer_Assets/mage-2-122x110.png" type="Texture" id=41]
[ext_resource path="res://Textures/Platformer_Assets/minion-45x66.png" type="Texture" id=42]
[ext_resource path="res://Textures/Platformer_Assets/gnu-120x100.png" type="Texture" id=43]
[ext_resource path="res://Textures/Platformer_Assets/disciple-45x51.png" type="Texture" id=44]
[ext_resource path="res://Sounds/Belgium.wav" type="AudioStream" id=45]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 8 ) ],
"loop": true,
"name": "jump",
"speed": 7.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 9 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 16 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 38 ), ExtResource( 36 ), ExtResource( 35 ), ExtResource( 32 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 30 ) ],
"loop": true,
"name": "run_shoot",
"speed": 8.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 21 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 22 ) ],
"loop": true,
"name": "back_jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 37 ), ExtResource( 39 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 33 ) ],
"loop": true,
"name": "climb",
"speed": 6.0
} ]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 43 )
region = Rect2( 0, 0, 120, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 43 )
region = Rect2( 120, 0, 120, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 43 )
region = Rect2( 240, 0, 120, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 43 )
region = Rect2( 360, 0, 120, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 43 )
region = Rect2( 480, 0, 120, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 43 )
region = Rect2( 0, 100, 120, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 43 )
region = Rect2( 120, 100, 120, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 43 )
region = Rect2( 240, 100, 120, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 43 )
region = Rect2( 360, 100, 120, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 43 )
region = Rect2( 480, 100, 120, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 43 )
region = Rect2( 0, 200, 120, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 43 )
region = Rect2( 120, 200, 120, 100 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 43 )
region = Rect2( 240, 200, 120, 100 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 43 )
region = Rect2( 360, 200, 120, 100 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 43 )
region = Rect2( 480, 200, 120, 100 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 43 )
region = Rect2( 0, 300, 120, 100 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 43 )
region = Rect2( 120, 300, 120, 100 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 40 )
region = Rect2( 0, 0, 80, 70 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 40 )
region = Rect2( 80, 0, 80, 70 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 40 )
region = Rect2( 160, 0, 80, 70 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 40 )
region = Rect2( 240, 0, 80, 70 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 40 )
region = Rect2( 0, 70, 80, 70 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 40 )
region = Rect2( 80, 70, 80, 70 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 40 )
region = Rect2( 160, 70, 80, 70 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 40 )
region = Rect2( 240, 70, 80, 70 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 40 )
region = Rect2( 0, 140, 80, 70 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 40 )
region = Rect2( 80, 140, 80, 70 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 40 )
region = Rect2( 160, 140, 80, 70 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 40 )
region = Rect2( 240, 140, 80, 70 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 40 )
region = Rect2( 0, 210, 80, 70 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 40 )
region = Rect2( 80, 210, 80, 70 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 40 )
region = Rect2( 0, 280, 80, 70 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 40 )
region = Rect2( 80, 280, 80, 70 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 40 )
region = Rect2( 160, 280, 80, 70 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 40 )
region = Rect2( 240, 280, 80, 70 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 41 )
region = Rect2( 0, 0, 122, 110 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 41 )
region = Rect2( 122, 0, 122, 110 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 41 )
region = Rect2( 244, 0, 122, 110 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 41 )
region = Rect2( 366, 0, 122, 110 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 41 )
region = Rect2( 0, 110, 122, 110 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 41 )
region = Rect2( 122, 110, 122, 110 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 41 )
region = Rect2( 244, 110, 122, 110 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 41 )
region = Rect2( 366, 110, 122, 110 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 44 )
region = Rect2( 0, 0, 45, 51 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 44 )
region = Rect2( 45, 0, 45, 51 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 44 )
region = Rect2( 90, 0, 45, 51 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 44 )
region = Rect2( 135, 0, 45, 51 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 44 )
region = Rect2( 0, 51, 45, 51 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 44 )
region = Rect2( 45, 51, 45, 51 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 44 )
region = Rect2( 90, 51, 45, 51 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 44 )
region = Rect2( 135, 51, 45, 51 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 44 )
region = Rect2( 0, 102, 45, 51 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 44 )
region = Rect2( 45, 102, 45, 51 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 44 )
region = Rect2( 90, 102, 45, 51 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 44 )
region = Rect2( 135, 102, 45, 51 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 42 )
region = Rect2( 0, 0, 45, 66 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 42 )
region = Rect2( 45, 0, 45, 66 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 42 )
region = Rect2( 90, 0, 45, 66 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 42 )
region = Rect2( 0, 66, 45, 66 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 42 )
region = Rect2( 45, 66, 45, 66 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 42 )
region = Rect2( 90, 66, 45, 66 )

[sub_resource type="SpriteFrames" id=63]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 18 ) ],
"loop": true,
"name": "gnu",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "shadow",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "mage_super",
"speed": 5.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 56 ) ],
"loop": true,
"name": "sorcerer",
"speed": 5.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": true,
"name": "monster",
"speed": 5.0
} ]

[node name="TitleMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -427.0
margin_bottom = 3.05176e-05
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 213.0
margin_right = -214.0
margin_bottom = 3.05176e-05
color = Color( 0.992157, 0.854902, 0.141176, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 426.0
color = Color( 0.937255, 0.2, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 64.0
margin_top = 40.0
margin_right = 584.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_right = 520.0
margin_bottom = 75.0
texture = ExtResource( 2 )

[node name="CentreRow" type="HBoxContainer" parent="Menu"]
margin_top = 79.0
margin_right = 520.0
margin_bottom = 299.0

[node name="Buttons" type="VBoxContainer" parent="Menu/CentreRow"]
margin_right = 300.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" parent="Menu/CentreRow/Buttons" instance=ExtResource( 3 )]
margin_right = 300.0
margin_bottom = 60.0
target_scene = "res://GameScenes/Platform/World.tscn"

[node name="ContinueButton" parent="Menu/CentreRow/Buttons" instance=ExtResource( 4 )]
margin_top = 80.0
margin_right = 300.0
margin_bottom = 140.0
target_scene = "res://GameScenes/Platform/Continue.tscn"

[node name="OptionsButton" parent="Menu/CentreRow/Buttons" instance=ExtResource( 1 )]
margin_top = 160.0
margin_right = 300.0
margin_bottom = 220.0
target_scene = "res://GameScenes/Platform/Buttons/OptionsMenu.tscn"

[node name="CenterContainer" type="CenterContainer" parent="Menu/CentreRow"]
margin_left = 304.0
margin_right = 520.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Characters" type="AnimatedSprite" parent="Menu/CentreRow/CenterContainer"]
position = Vector2( 160, 73 )
frames = SubResource( 1 )
animation = "run_shoot"
frame = 1
playing = true

[node name="Enemy" type="AnimatedSprite" parent="Menu/CentreRow/CenterContainer"]
visible = false
position = Vector2( 160, 169 )
frames = SubResource( 63 )
animation = "shadow"
frame = 2
playing = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 45 )
autoplay = true
[connection signal="animation_finished" from="Menu/CentreRow/CenterContainer/Characters" to="." method="_on_Characters_animation_finished"]
[connection signal="animation_finished" from="Menu/CentreRow/CenterContainer/Enemy" to="." method="_on_Enemy_animation_finished"]
